# otto

./: .gitignore  LICENSE  README.md  _oasis  _tags  dune-project  myocamlbuild.ml  opam  otto.mldylib  otto.opam  setup.ml
otto/: .merlin  _oasis  _tags  myocamlbuild.ml
otto.0.0.1/: .merlin  LICENSE  descr  opam  url
otto.0.0.1/examples/: hw0.ml  hw1.mli
otto.0.0.1/src/: hw2tester-color.ml  hw2tester.ml  otto.ml  otto.mli
otto/src/: otto.ml
otto/test/: hw0.mli  hw1.ml  hw1.mli  test.ml
src/: META  dune  otto.ml  otto.mli
test/: dune  hw0.ml  hw1.ml  test.ml
